[Editorial] match text to Victoria (Act 5)

--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor</b> of Physic and a <b epub:type="z3998:persona">Waiting-Gentlewoman</b>.</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor of Physic</b> and a <b epub:type="z3998:persona">Waiting-Gentlewoman</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -31,7 +31,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Gentlewoman</td>
-							<td>Since his majesty went into the field, I have seen her rise from her bed, throw her night-gown upon her, unlock her closet, take forth paper, fold it, write upon’t, read it, afterwards seal it, and again return to bed; yet all this while in a most fast sleep.</td>
+							<td>Since his majesty went into the field, I have seen her rise from her bed, throw her nightgown upon her, unlock her closet, take forth paper, fold it, write upon’t, read it, afterwards seal it, and again return to bed; yet all this while in a most fast sleep.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Doctor</td>
@@ -93,21 +93,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lady Macbeth</td>
-							<td epub:type="z3998:verse">
-								<p>
-									<span>Out, damned spot! out, I say!⁠—One: two: why,</span>
-									<br/>
-									<span>then, ’tis time to do’t.⁠—Hell is murky!⁠—Fie, my</span>
-									<br/>
-									<span>lord, fie! a soldier, and afeard? What need we</span>
-									<br/>
-									<span>fear who knows it, when none can call our power to</span>
-									<br/>
-									<span>account?⁠—Yet who would have thought the old man</span>
-									<br/>
-									<span>to have had so much blood in him.</span>
-								</p>
-							</td>
+							<td>Out, damned spot! out, I say!⁠—One: two: why, then, ’tis time to do’t.⁠—Hell is murky!⁠—Fie, my lord, fie! a soldier, and afeard? What need we fear who knows it, when none can call our power to account?⁠—Yet who would have thought the old man to have had so much blood in him.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Doctor</td>
@@ -147,27 +133,11 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Doctor</td>
-							<td epub:type="z3998:verse">
-								<p>
-									<span>This disease is beyond my practise: yet I have known</span>
-									<br/>
-									<span>those which have walked in their sleep who have died</span>
-									<br/>
-									<span>holily in their beds.</span>
-								</p>
-							</td>
+							<td>This disease is beyond my practice: yet I have known those which have walked in their sleep who have died holily in their beds.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lady Macbeth</td>
-							<td epub:type="z3998:verse">
-								<p>
-									<span>Wash your hands, put on your nightgown; look not so</span>
-									<br/>
-									<span>pale.⁠—I tell you yet again, Banquo’s buried; he</span>
-									<br/>
-									<span>cannot come out on’s grave.</span>
-								</p>
-							</td>
+							<td>Wash your hands, put on your nightgown; look not so pale.⁠—I tell you yet again, Banquo’s buried; he cannot come out on’s grave.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Doctor</td>
@@ -175,15 +145,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lady Macbeth</td>
-							<td epub:type="z3998:verse">
-								<p>
-									<span>To bed, to bed! there’s knocking at the gate:</span>
-									<br/>
-									<span>come, come, come, come, give me your hand. What’s</span>
-									<br/>
-									<span>done cannot be undone.⁠—To bed, to bed, to bed! <i epub:type="z3998:stage-direction">Exit.</i></span>
-								</p>
-							</td>
+							<td>To bed, to bed! there’s knocking at the gate: come, come, come, come, give me your hand. What’s done cannot be undone.⁠—To bed, to bed, to bed! <i epub:type="z3998:stage-direction">Exit.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Doctor</td>
@@ -378,7 +340,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Macbeth</b>, Doctor, and Attendants.</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Macbeth</b>, <b epub:type="z3998:persona">Doctor</b>, and Attendants.</i>
 							</td>
 						</tr>
 						<tr>
@@ -397,9 +359,7 @@
 									<br/>
 									<span>“Fear not, Macbeth; no man that’s born of woman</span>
 									<br/>
-									<span>Shall e’er have power upon thee.” Then fly,</span>
-									<br/>
-									<span>false thanes,</span>
+									<span>Shall e’er have power upon thee.” Then fly, false thanes,</span>
 									<br/>
 									<span>And mingle with the English epicures:</span>
 									<br/>
@@ -431,7 +391,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Macbeth</td>
-							<td>Geese, villain!</td>
+							<td>Geese, villain?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Servant</td>
@@ -477,7 +437,9 @@
 									<br/>
 									<span>Curses, not loud but deep, mouth-honour, breath,</span>
 									<br/>
-									<span>Which the poor heart would fain deny, and dare not. Seyton!</span>
+									<span>Which the poor heart would fain deny, and dare not.</span>
+									<br/>
+									<span>Seyton!</span>
 								</p>
 							</td>
 						</tr>
@@ -641,7 +603,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">Malcolm</b>, <b epub:type="z3998:persona">Siward</b> and <b epub:type="z3998:persona">Young Siward</b>, <b epub:type="z3998:persona">Macduff</b>, <b epub:type="z3998:persona">Menteith</b>, <b epub:type="z3998:persona">Caithness</b>, <b epub:type="z3998:persona">Angus</b>, <b epub:type="z3998:persona">Lennox</b>, <b epub:type="z3998:persona">Ross</b>, and <b epub:type="z3998:persona">Soldiers</b>, marching.</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">Malcolm</b>, old <b epub:type="z3998:persona">Siward</b> and his <b epub:type="z3998:persona">Son</b>, <b epub:type="z3998:persona">Macduff</b>, <b epub:type="z3998:persona">Menteith</b>, <b epub:type="z3998:persona">Caithness</b>, <b epub:type="z3998:persona">Angus</b>, <b epub:type="z3998:persona">Lennox</b>, <b epub:type="z3998:persona">Ross</b>, and <b epub:type="z3998:persona">Soldiers</b>, marching.</i>
 							</td>
 						</tr>
 						<tr>
@@ -692,7 +654,7 @@
 									<br/>
 									<span>Keeps still in Dunsinane, and will endure</span>
 									<br/>
-									<span>Our setting down before “t.</span>
+									<span>Our setting down before’t.</span>
 								</p>
 							</td>
 						</tr>
@@ -787,7 +749,7 @@
 							<td epub:type="z3998:persona">Macbeth</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>I have almost forgot the taste of fears;</span>
+									<span>I have almost forgot the taste of fears:</span>
 									<br/>
 									<span>The time has been, my senses would have cool’d</span>
 									<br/>
@@ -797,7 +759,7 @@
 									<br/>
 									<span>As life were in’t: I have supp’d full with horrors;</span>
 									<br/>
-									<span>Direness, familiar to my slaughterous thoughts</span>
+									<span>Direness, familiar to my slaughterous thoughts,</span>
 									<br/>
 									<span>Cannot once start me.</span>
 								</p>
@@ -951,14 +913,14 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">Malcolm</b>, <b epub:type="z3998:persona">Siward</b>, <b epub:type="z3998:persona">Macduff</b>, and their Army, with boughs.</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">Malcolm</b>, old <b epub:type="z3998:persona">Siward</b>, <b epub:type="z3998:persona">Macduff</b>, and their Army, with boughs.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Malcolm</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Now near enough: your leafy screens throw down.</span>
+									<span>Now near enough: your leavy screens throw down,</span>
 									<br/>
 									<span>And show like those you are. You, worthy uncle,</span>
 									<br/>
@@ -966,7 +928,7 @@
 									<br/>
 									<span>Lead our first battle: worthy Macduff and we</span>
 									<br/>
-									<span>Shall take upon “s what else remains to do,</span>
+									<span>Shall take upon’s what else remains to do,</span>
 									<br/>
 									<span>According to our order.</span>
 								</p>
@@ -1073,14 +1035,8 @@
 								<p>
 									<span>Thou liest, abhorred tyrant; with my sword</span>
 									<br/>
-									<span>I’ll prove the lie thou speak’st.</span>
+									<span>I’ll prove the lie thou speak’st. <i epub:type="z3998:stage-direction">They fight and <b epub:type="z3998:persona">Young Siward</b> is slain.</i></span>
 								</p>
-							</td>
-						</tr>
-						<tr>
-							<td/>
-							<td>
-								<i epub:type="z3998:stage-direction">They fight and <b epub:type="z3998:persona">Young Siward</b> is slain.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1130,7 +1086,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Malcolm</b> and <b epub:type="z3998:persona">Siward</b>.</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Malcolm</b> and old <b epub:type="z3998:persona">Siward</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1238,7 +1194,7 @@
 									<br/>
 									<span>Let fall thy blade on vulnerable crests;</span>
 									<br/>
-									<span>I bear a charmed life, which must not yield,</span>
+									<span>I bear a charmed life, which must not yield</span>
 									<br/>
 									<span>To one of woman born.</span>
 								</p>
@@ -1317,7 +1273,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Retreat. Flourish. Enter, with drum and colours, <b epub:type="z3998:persona">Malcolm</b>, <b epub:type="z3998:persona">Siward</b>, <b epub:type="z3998:persona">Ross</b>, the other Thanes, and Soldiers.</i>
+								<i epub:type="z3998:stage-direction">Retreat. Flourish. Enter, with drum and colours, <b epub:type="z3998:persona">Malcolm</b>, old <b epub:type="z3998:persona">Siward</b>, <b epub:type="z3998:persona">Ross</b>, the other Thanes, and Soldiers.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1406,7 +1362,7 @@
 							<td epub:type="z3998:persona">Siward</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>He’s worth no more</span>
+									<span>He’s worth no more:</span>
 									<br/>
 									<span>They say he parted well, and paid his score:</span>
 									<br/>
