--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -1142,7 +1142,9 @@
 						<tr>
 							<td epub:type="z3998:persona">Lady Macbeth</td>
 							<td>
-								<p>“They met me in the day of success: and I have learned by the perfectest report, they have more in them than mortal knowledge. When I burned in desire to question them further, they made themselves air, into which they vanished. Whiles I stood rapt in the wonder of it, came missives from the king, who all-hailed me ‘Thane of Cawdor;’ by which title, before, these weird sisters saluted me, and referred me to the coming on of time, with ‘Hail, king that shalt be!’ This have I thought good to deliver thee, my dearest partner of greatness, that thou mightst not lose the dues of rejoicing, by being ignorant of what greatness is promised thee. Lay it to thy heart, and farewell.”</p>
+								<blockquote epub:type="z3998:letter">
+									<p>“They met me in the day of success: and I have learned by the perfectest report, they have more in them than mortal knowledge. When I burned in desire to question them further, they made themselves air, into which they vanished. Whiles I stood rapt in the wonder of it, came missives from the king, who all-hailed me ‘Thane of Cawdor;’ by which title, before, these weird sisters saluted me, and referred me to the coming on of time, with ‘Hail, king that shalt be!’ This have I thought good to deliver thee, my dearest partner of greatness, that thou mightst not lose the dues of rejoicing, by being ignorant of what greatness is promised thee. <span epub:type="z3998:valediction">Lay it to thy heart, and farewell.</span>”</p>
+								</blockquote>
 								<div epub:type="z3998:verse">
 									<p>
 										<span>Glamis thou art, and Cawdor; and shalt be</span>
