[Editorial] correct quotation

--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -1238,7 +1238,7 @@
 								<p>
 									<span>Then yield thee, coward,</span>
 									<br/>
-									<span>And live to be the show and gaze o” the time:</span>
+									<span>And live to be the show and gaze o’ the time:</span>
 									<br/>
 									<span>We’ll have thee, as our rarer monsters are,</span>
 									<br/>
