[Editorial] you'ld -> you'd

--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -885,7 +885,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Son</td>
-							<td>If he were dead, you’ld weep for him: if you would not, it were a good sign that I should quickly have a new father.</td>
+							<td>If he were dead, you’d weep for him: if you would not, it were a good sign that I should quickly have a new father.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Lady Macduff</td>
