[Editorial] se'nnight -> sennight

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -419,7 +419,7 @@
 									<br/>
 									<span>He shall live a man forbid:</span>
 									<br/>
-									<span>Weary se’nnights nine times nine</span>
+									<span>Weary sennights nine times nine</span>
 									<br/>
 									<span>Shall he dwindle, peak and pine:</span>
 									<br/>
