[Editorial] villanies -> villainies

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -140,7 +140,7 @@
 									<br/>
 									<span>Worthy to be a rebel, for to that</span>
 									<br/>
-									<span>The multiplying villanies of nature</span>
+									<span>The multiplying villainies of nature</span>
 									<br/>
 									<span>Do swarm upon him⁠—from the western isles</span>
 									<br/>
