[Editorial] re-enter -> reenter

--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -531,7 +531,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Lady Macbeth</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Lady Macbeth</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -746,7 +746,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Macduff</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Macduff</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -885,7 +885,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Macbeth</b> and <b epub:type="z3998:persona">Lennox</b>, with <b epub:type="z3998:persona">Ross</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Macbeth</b> and <b epub:type="z3998:persona">Lennox</b>, with <b epub:type="z3998:persona">Ross</b>.</i>
 							</td>
 						</tr>
 						<tr>
