--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -252,7 +252,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Attendant</b>, with two <b epub:type="z3998:persona">Murderers</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Attendant</b>, with two <b epub:type="z3998:persona">Murderers</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1257,7 +1257,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Ghost</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Ghost</b>.</i>
 							</td>
 						</tr>
 						<tr>
