--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -768,7 +768,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Seyton</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Seyton</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1373,7 +1373,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Macduff</b>, with <b epub:type="z3998:persona">Macbeth’s</b> head.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Macduff</b>, with <b epub:type="z3998:persona">Macbeth’s</b> head.</i>
 							</td>
 						</tr>
 						<tr>
